# kbase

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: docker.yaml
.run/: main start.run.xml
.script/: integration_test_compose.yml  test.sh
app/: __init__.py  main.py
app/config/: settings.py
app/domain/: __init__.py  document.py  search.py
app/service/: elasticsearch.py
app/utils/converters/: __init__.py  search.py
app/utils/embedders/: __init__.py  sentence_transformer.py
app/utils/loaders/: __init__.py  dispatcher.py
app/utils/rerankers/: __init__.py  bge.py
app/utils/splitters/: __init__.py  recursive_character_text.py
app/web/: document.py  handler.py  vo.py
tests/: conftest.py  test_api.py
tests/fixtures/: config.yaml
tests/web/: __init__.py
tests/web/document/: __init__.py  es_search_test.py  health_endpoint_test.py  save_endpoint_test.py  structured_search_test.py  upload_endpoint_test.py  vector_hybrid_search_test.py
